--- a/allAPP.html
+++ b/allAPP.html
@@ -287,6 +287,15 @@
         <div class="app-container single-column">
 
 		
+<div class="app" data-category="游戏">
+                <div class="dot"></div>
+                <img src="images/gba模拟器.png" alt="dadashuai">
+                <h2>gba模拟器</h2>
+	        <h3>大小：1.23MB</h3>
+	        <p>这是一款gba游戏模拟器 功能完整。可以玩gba游戏</p>
+ 	        <button onclick="downloadApp('https://fel1.forxhr.top:2022/down.php/84dfe8cf262289af95883c72fa3e3461.apk')">下载 App</button>
+        </div>
+		
 <div class="app" data-category="娱乐">
                 <div class="dot"></div>
                 <img src="images/腕能漫画.png" alt="dadashuai">
